--- a/partials/api/analytics.BarneyAnalytics.html
+++ b/partials/api/analytics.BarneyAnalytics.html
@@ -18,6 +18,14 @@ angular.module('mock').controller('HomePageController', [
 </pre>
 Note that I included BarneyAnalytics as dependency but I have renamed it as Analytics 
 to use it more easily in controller code.</p>
+<h3 id="description_list-method">List Method:</h3>
+<ul>
+<li><a href="#/api/analytics.BarneyAnalytics#methods_init">init</a></li>
+<li><a href="#/api/analytics.BarneyAnalytics#methods_setdimension">setDimension</a></li>
+<li><a href="#/api/analytics.BarneyAnalytics#methods_setid">setId</a></li>
+<li><a href="#/api/analytics.BarneyAnalytics#methods_trackevent">trackEvent</a></li>
+<li><a href="#/api/analytics.BarneyAnalytics#methods_trackpage">trackPage</a></li>
+</ul>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_init">init(options)</h3>
