--- a/partials/api/analytics.html
+++ b/partials/api/analytics.html
@@ -11,6 +11,10 @@ You can use it to:</p>
 <li>track a page</li>
 <li>track an event</li>
 </ul>
+<h2 id="components">Components</h2>
+<ul>
+<li><a href="#/api/analytics.BarneyAnalytics">BarneyAnalytics</a></li>
+</ul>
 <h2 id="usage">Usage</h2>
 <p>To use <strong>Analytics</strong> module you have to include the <strong>Analytics</strong> javascript file in your index.html:</p>
 <pre class="prettyprint linenums">
@@ -22,12 +26,4 @@ You can use it to:</p>
 <h2 id="init-analytics">Init Analytics</h2>
 <p>Before using Analytics module, it must be initialized. 
 To initialize Analytics you can use the Analytics method <a href="#/api/analytics.BarneyAnalytics#methods_init">init</a>.</p>
-<h2 id="methods">Methods:</h2>
-<ul>
-<li><a href="#/api/analytics.BarneyAnalytics#methods_init">init</a></li>
-<li><a href="#/api/analytics.BarneyAnalytics#methods_setdimension">setDimension</a></li>
-<li><a href="#/api/analytics.BarneyAnalytics#methods_setid">setId</a></li>
-<li><a href="#/api/analytics.BarneyAnalytics#methods_trackevent">trackEvent</a></li>
-<li><a href="#/api/analytics.BarneyAnalytics#methods_trackpage">trackPage</a></li>
-</ul>
 </div></div>
