--- a/partials/api/callbacky.html
+++ b/partials/api/callbacky.html
@@ -5,6 +5,10 @@
 <div><div class="callbacky-page"><h2 id="callbacky">Callbacky</h2>
 <p>Callbacky is the module of Barney that allow you 
 to bind and trigger a function from different points in your code (i.e: controllers, services, ...).</p>
+<h2 id="components">Components</h2>
+<ul>
+<li><a href="#/api/callbacky.BarneyCallbacky">BarneyCallbacky</a></li>
+</ul>
 <h2 id="usage">Usage</h2>
 <p>To use <strong>Callbacky</strong> module you have to include the <strong>Callbacky</strong> javascript files in your index.html:</p>
 <pre class="prettyprint linenums">
@@ -16,11 +20,4 @@ to bind and trigger a function from different points in your code (i.e: controll
 <h2 id="init-callbacky">Init Callbacky</h2>
 <p>Before using Callbacky module, it must be initialized. 
 To initialize Callbacky you can use the Callbacky method <a href="#/api/callbacky.BarneyCallbacky#methods_init">init</a>.</p>
-<h2 id="methods">Methods:</h2>
-<ul>
-<li><a href="#/api/callbacky.BarneyCallbacky#methods_bind">bind</a></li>
-<li><a href="#/api/callbacky.BarneyCallbacky#methods_clean">clean</a></li>
-<li><a href="#/api/callbacky.BarneyCallbacky#methods_init">init</a></li>
-<li><a href="#/api/callbacky.BarneyCallbacky#methods_trigger">trigger</a></li>
-</ul>
 </div></div>
