--- a/partials/api/dict.html
+++ b/partials/api/dict.html
@@ -3,28 +3,22 @@
 </div>
 </h1>
 <div><div class="dict-page"><h2 id="dict">Dict</h2>
-<p>Dict is the module of Barney to show dictionary keys.
-You can use it:</p>
+<p>Dict is the module of Barney to show dictionary keys.</p>
+<h2 id="components">Components</h2>
 <ul>
-<li>as a <a href="#/api/dict.BarneyDict">provider</a></li>
-<li>as a <a href="#/api/dict.filter:dict">filter</a></li>
-<li>as a <a href="#/api/dict.directive:dict">directive</a></li>
+<li><a href="#/api/dict.BarneyDict">BarneyDict</a></li>
+<li><a href="#/api/dict.filter:dict">filter</a></li>
+<li><a href="#/api/dict.directive:dict">directive</a></li>
 </ul>
 <h2 id="usage">Usage</h2>
 <p>To use <strong>Dict</strong> module you have to include the <strong>Dict</strong> javascript file in your index.html:</p>
 <pre class="prettyprint linenums">
 
-  &lt;!-- Dict module - Required --&gt;
+  &lt;!-- Dict module  --&gt;
   &lt;script type="text/javascript" src="./bower_components/barney/dist/dict.min.js"&gt; 
 
 </pre>
 <h2 id="init-dict">Init Dict</h2>
 <p>Before using Dict module, it must be initialized.To initialize Dict 
 module use Dict&#39; s method <a href="#/api/dict.BarneyDict#methods_init">init</a>. </p>
-<h2 id="methods">Methods:</h2>
-<ul>
-<li><a href="#/api/dict.BarneyDict#methods_get">get</a></li>
-<li><a href="#/api/dict.BarneyDict#methods_init">init</a></li>
-<li><a href="#/api/dict.BarneyDict#methods_list">list</a></li>
-</ul>
 </div></div>
