--- a/partials/api/history.BarneyHistory.html
+++ b/partials/api/history.BarneyHistory.html
@@ -16,6 +16,12 @@ angular.module('mock').controller('HomePageController', [
 ]);
 </pre>
 Note that I included BarneyHistory as dependency but I have renamed it as History to use it more easily in controller code.</p>
+<h3 id="description_list-methods">List Methods:</h3>
+<ul>
+<li><a href="#/api/history.BarneyHistory#methods_get">get</a></li>
+<li><a href="#/api/history.BarneyHistory#methods_goback">goBack</a></li>
+<li><a href="#/api/history.BarneyHistory#methods_init">init</a></li>
+</ul>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_get">get()</h3>
