--- a/partials/api/infinite.html
+++ b/partials/api/infinite.html
@@ -19,6 +19,10 @@ will fill the page for you, if there will be enough contents!</p>
 <p>If you want to activate <strong>BarneyInfinite</strong> before the reaching of the end of the window you 
 can use the offset attribute to tell <strong>BarneyInfinite</strong> how much before it must activate 
 itself.</p>
+<h2 id="components">Components</h2>
+<ul>
+<li><a href="#/api/infinite.directive:InfiniteScroll">directive</a></li>
+</ul>
 <h2 id="usage">Usage</h2>
 <p>To use <strong>Infinite</strong> directive you have to include the <strong>Infinite</strong> javascript file in your index.html:</p>
 <pre class="prettyprint linenums">
