--- a/partials/api/meta.BarneyMeta.html
+++ b/partials/api/meta.BarneyMeta.html
@@ -16,6 +16,15 @@ angular.module('mock').controller('HomePageController', [
 ]);
 </pre>
 <p>Note that I included BarneyMeta as dependency but I have renamed it as Meta to use it more easily in controller code.</p>
+<h3 id="description_methods">Methods:</h3>
+<ul>
+<li><a href="#/api/meta.BarneyMeta#methods_default">default</a></li>
+<li><a href="#/api/meta.BarneyMeta#methods_get">get</a></li>
+<li><a href="#/api/meta.BarneyMeta#methods_init">init</a></li>
+<li><a href="#/api/meta.BarneyMeta#methods_list">list</a></li>
+<li><a href="#/api/meta.BarneyMeta#methods_revert">revert</a></li>
+<li><a href="#/api/meta.BarneyMeta#methods_set">set</a></li>
+</ul>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_default">default()</h3>
