--- a/partials/api/meta.html
+++ b/partials/api/meta.html
@@ -5,6 +5,10 @@
 <div><div class="meta-page"><h2 id="meta">Meta</h2>
 <p>Meta is the module of Barney to fill meta tags dinamically.
 Meta can be used to manage different metatags for each page.</p>
+<h2 id="components">Components</h2>
+<ul>
+<li><a href="#/api/meta.BarneyMeta">BarneyMeta</a></li>
+</ul>
 <h2 id="usage">Usage</h2>
 <p>To use <strong>Meta</strong> module you have to include the <strong>Meta</strong> javascript file in your index.html:</p>
 <pre class="prettyprint linenums">
