--- a/partials/api/utility.BarneyUtility.html
+++ b/partials/api/utility.BarneyUtility.html
@@ -16,6 +16,14 @@ angular.module('mock').controller('HomePageController', [
 ]);
 </pre>
 Note that I included BarneyUtility as dependency but I have renamed it as Utility to use it more easily in controller code.</p>
+<h3 id="description_list-method">List Method</h3>
+<ul>
+<li><a href="#/api/utility.BarneyUtility#methods_addqueryparams">addQueryParams</a></li>
+<li><a href="#/api/utility.BarneyUtility#methods_arraydiff">arrayDiff</a></li>
+<li><a href="#/api/utility.BarneyUtility#methods_brutalredirect">brutalRedirect</a></li>
+<li><a href="#/api/utility.BarneyUtility#methods_clickandgo">clickAndGo</a></li>
+<li><a href="#/api/utility.BarneyUtility#methods_getcurrentquerystring">getCurrentQueryString</a></li>
+</ul>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_addqueryparams">addQueryParams(newParams, newUrl)</h3>
