--- a/partials/api/newton.BarneyNewton.html
+++ b/partials/api/newton.BarneyNewton.html
@@ -17,13 +17,48 @@ angular.module('mock').controller('HomePageController', [
 Note that I included BarneyNewton as dependency but I have renamed it as Newton to use it more easily in controller code.</p>
 <h3 id="description_list-method">List Method</h3>
 <ul>
+<li><a href="#/api/newton.BarneyNewton#methods_getsingleheartbeat">getSingleHeartbeat</a></li>
+<li><a href="#/api/newton.BarneyNewton#methods_heartbeatslist">heartbeatsList</a></li>
 <li><a href="#/api/newton.BarneyNewton#methods_init">init</a></li>
+<li><a href="#/api/newton.BarneyNewton#methods_startheartbeat">startHeartbeat</a></li>
+<li><a href="#/api/newton.BarneyNewton#methods_stopallheartbeat">stopAllHeartbeat</a></li>
+<li><a href="#/api/newton.BarneyNewton#methods_stopheartbeat">stopHeartbeat</a></li>
 <li><a href="#/api/newton.BarneyNewton#methods_trackevent">trackEvent</a></li>
 <li><a href="#/api/newton.BarneyNewton#methods_trackpage">trackPage</a></li>
 </ul>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
-<ul class="methods"><li><h3 id="methods_init">init(options)</h3>
+<ul class="methods"><li><h3 id="methods_getsingleheartbeat">getSingleHeartbeat(keyword)</h3>
+<div class="getsingleheartbeat"><div class="newton-barneynewton-getsingleheartbeat-page"><p>This method is used to <strong>get a single heartbeat information, with its initial properties</strong>. 
+You can use this method to retrieve all the information of an heartbeat.</p>
+</div><h5 id="methods_getsingleheartbeat_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyword</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="newton-barneynewton-getsingleheartbeat-page"><p>Newton heartbeat identifier</p>
+</div></td></tr></tbody></table><h4 id="methods_getsingleheartbeat_example">Example</h4>
+<div class="example"><div class="newton-barneynewton-getsingleheartbeat-page"><h5 id="methods_getsingleheartbeat_example_newton-getsingleheartbeat">Newton getSingleHeartbeat</h5>
+<p>Here is an example of the getSingleHeartbeat method.
+<pre class="prettyprint linenums">
+
+      //get all the heartbeats information
+      console.log('Heartbeats list: ', Newton.getSingleHeartbeat('atestheart'));
+      
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_heartbeatslist">heartbeatsList()</h3>
+<div class="heartbeatslist"><div class="newton-barneynewton-heartbeatslist-page"><p>This method <strong>provides you the complete list of all the running heartbeat, with their initial properties</strong>. 
+You can use this method to retrieve all the heartbeats information.</p>
+</div><h4 id="methods_heartbeatslist_example">Example</h4>
+<div class="example"><div class="newton-barneynewton-heartbeatslist-page"><h5 id="methods_heartbeatslist_example_newton-heartbeatslist">Newton heartbeatsList</h5>
+<p>Here is an example of the heartbeatsList method.
+<pre class="prettyprint linenums">
+      //get all the heartbeats information
+      console.log('Heartbeats list: ', Newton.heartbeatsList());
+      
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_init">init(options)</h3>
 <div class="init"><div class="newton-barneynewton-init-page"><p>This method is used to initialize the Newton module. It requires 3 parameters:</p>
 <ul>
 <li><strong>enabled</strong>: enable or disable the module (default: true)</li>
@@ -66,6 +101,63 @@ angular.module('mock').controller('HomePageController', [
   
     }
 ]);
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_startheartbeat">startHeartbeat(keyword, params)</h3>
+<div class="startheartbeat"><div class="newton-barneynewton-startheartbeat-page"><p>This method is used to <strong>send the heartbeat starting event</strong>. 
+Once called Newton will <strong>send message to track the time spent on the site</strong> with the interval specified in Newton.
+<strong>Is recommended to call the stopHeartbeat function when you want to stop heartbeat tracking.</strong>   </p>
+</div><h5 id="methods_startheartbeat_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyword</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="newton-barneynewton-startheartbeat-page"><p>Newton heartbeat identifier</p>
+</div></td></tr><tr><td>params</td><td><a href="" class="label type-hint type-hint-object">Object</a></td><td><div class="newton-barneynewton-startheartbeat-page"><p>Newton custom_data to track what you want.</p>
+</div></td></tr></tbody></table><h4 id="methods_startheartbeat_example">Example</h4>
+<div class="example"><div class="newton-barneynewton-startheartbeat-page"><h5 id="methods_startheartbeat_example_newton-startheartbeat">Newton startHeartbeat</h5>
+<p>Here is an example of the startHeartbeat method.
+<pre class="prettyprint linenums">
+
+  Newton.startHeartbeat('aTestHeart', {
+     label: 'page_title',
+     valuable: 'no',
+     action: 'no'
+  });
+
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_stopallheartbeat">stopAllHeartbeat()</h3>
+<div class="stopallheartbeat"><div class="newton-barneynewton-stopallheartbeat-page"><p>This method is used to <strong>stop all the heartbeat that are running</strong>. 
+You can use this method to easily stop all the heartbeat event.</p>
+<p><strong>Is recommended to use it on the unload event of the window.</strong></p>
+</div><h4 id="methods_stopallheartbeat_example">Example</h4>
+<div class="example"><div class="newton-barneynewton-stopallheartbeat-page"><h5 id="methods_stopallheartbeat_example_newton-stopallheartbeat">Newton stopAllHeartbeat</h5>
+<p>Here is an example of the stopAllHeartbeat method.
+<pre class="prettyprint linenums">
+
+   window.addEventListener("unload", function(){
+      console.log('Document closed - stopping all heartbeat');
+      Newton.stopAllHeartbeat();
+   }, false);
+
+</pre>
+</div></div>
+</div>
+</li>
+<li><h3 id="methods_stopheartbeat">stopHeartbeat(keyword)</h3>
+<div class="stopheartbeat"><div class="newton-barneynewton-stopheartbeat-page"><p>This method is used to send the heartbeat stop event. 
+Once called Newton will <strong>stop to track the time spent on the site</strong>, and the heartbeat tracking will be removed
+from the heartbeats list.
+Before calling the stop heartbeat event <strong>remember that the heartbeat must be started</strong>.   </p>
+</div><h5 id="methods_stopheartbeat_parameters">Parameters</h5><table class="variables-matrix table table-bordered table-striped"><thead><tr><th>Param</th><th>Type</th><th>Details</th></tr></thead><tbody><tr><td>keyword</td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="newton-barneynewton-stopheartbeat-page"><p>Newton heartbeat identifier</p>
+</div></td></tr></tbody></table><h4 id="methods_stopheartbeat_example">Example</h4>
+<div class="example"><div class="newton-barneynewton-stopheartbeat-page"><h5 id="methods_stopheartbeat_example_newton-stopheartbeat">Newton stopHeartbeat</h5>
+<p>Here is an example of the stopHeartbeat method.
+<pre class="prettyprint linenums">
+
+  //after Newton.startHeartbeat(...)
+  Newton.stopHeartbeat('aTestHeart');
+
 </pre>
 </div></div>
 </div>
